# docs/swagger.yaml
@@ -1,11 +1,11 @@
 definitions:
   app.Pager:
     properties:
-      page:
+      pageNo:
         type: integer
-      page_size:
+      pageSize:
         type: integer
-      total_rows:
+      totalRows:
         type: integer
     type: object
   errcode.Error:
@@ -93,44 +93,8 @@ info:
   license: {}
   termsOfService: https://github.com/spider-nns/gin-blog
   title: gin-blog
-  version: V1
+  version: v1
 paths:
-  /api/V1/tags:
-    get:
-      parameters:
-      - description: 标签名称
-        in: query
-        maxLength: 100
-        name: name
-        type: string
-      - description: 状态
-        in: query
-        name: state
-        type: integer
-      - description: 页码
-        in: query
-        name: page
-        type: integer
-      - description: 页大小
-        in: query
-        name: pageSize
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: 成功
-          schema:
-            $ref: '#/definitions/model.TagSwagger'
-        "400":
-          description: 请求错误
-          schema:
-            $ref: '#/definitions/errcode.Error'
-        "500":
-          description: 内部错误
-          schema:
-            $ref: '#/definitions/errcode.Error'
-      summary: 获取多个标签
   /api/v1/articles:
     get:
       parameters:
@@ -325,6 +289,41 @@ paths:
             $ref: '#/definitions/errcode.Error'
       summary: 更新文章
   /api/v1/tags:
+    get:
+      parameters:
+      - description: 标签名称
+        in: query
+        maxLength: 100
+        name: name
+        type: string
+      - description: 状态
+        in: query
+        name: state
+        type: integer
+      - description: 页码
+        in: query
+        name: page
+        type: integer
+      - description: 页大小
+        in: query
+        name: pageSize
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功
+          schema:
+            $ref: '#/definitions/model.TagSwagger'
+        "400":
+          description: 请求错误
+          schema:
+            $ref: '#/definitions/errcode.Error'
+        "500":
+          description: 内部错误
+          schema:
+            $ref: '#/definitions/errcode.Error'
+      summary: 获取多个标签
     post:
       parameters:
       - description: 标签名称
