# pkg/app/app.go
@@ -12,9 +12,9 @@ type Response struct {
 	Ctx *gin.Context
 }
 type Pager struct {
-	Page      int `json:"page"`
-	PageSize  int `json:"page_size"`
-	TotalRows int `json:"total_rows"`
+	PageNo      int `json:"pageNo"`
+	PageSize  int `json:"pageSize"`
+	TotalRows int `json:"totalRows"`
 }
 
 func NewResponse(ctx *gin.Context) *Response {
@@ -30,7 +30,7 @@ func (r *Response) ToResponseList(list interface{}, totalRows int) {
 	r.Ctx.JSON(http.StatusOK, gin.H{
 		"list": list,
 		"pager": Pager{
-			Page:      GetPage(r.Ctx),
+			PageNo:      GetPage(r.Ctx),
 			PageSize:  GetPageSize(r.Ctx),
 			TotalRows: totalRows,
 		},
